		that they always pass through setSelected(...) and only then determine if
		the objects should be put in the "selected wrappers", so its DrawInfo2D
		has the selected flag set.  setSelected(false) is also called.
	Fix to TrailedPortrayal2D in conjunction with MovablePortrayal2D.  TrailedPortrayal2D
		has to know it's been selected, but it's wrapped around a DIFFERENT field
		portrayal than the object it's trailing.  This is a problem because if it's
		not selected, it won't hilight the trail.  When would this happen?  If
		MovablePortrayal2D has moved an object, it just calls select on that object
		and not on the underlying trail.  The fix is a hack: we make sure that
		TrailedPortrayal2D wraps both the object in the trail and the object in
		the main field portrayal (see Flockers for an example), so its setSelected
		method is called for sure.  Then TrailedPortrayal maintains an internal
		boolean variable which checks against this, and also double-checks that the
		underlying field portrayal is the one it's supposed to draw in.
	Double2D, Double3D, MutableDouble2D, and MutableDouble3D modified so that, for 
		purposes of equals() and hashCode(), 0.0 == -0.0, so elements get hashed to
		the same cell.
	Deleted private function SimState.indexAfterArgumentForKey
	SimState.nameThread() no longer static.
	Added SimState.setSeed() and SimState.setJob()
	SimState.setRandom() deprecated.  Use setSeed() instead.
	Deprecated schedule.time().  Use getTime() instead.
	Made Schedule.scheduleOnce(Key, Steppable) protected
	RandomSequence now synchronizes on the *Schedule*, not the random number generator.
	WeakStep no longer weakly holds its optional Stoppable
	AsynchronousSteppable.stopper() deprecated
	Documentation template examples in AsynchronousSteppable were wrong and have been
		revised (and a new one has been added).
	AsynchronousSteppable is now officially Stoppable
	ParallelSequence.cleaner() added
	DoubleDimension2D eliminated